Fix for article spacing

--- a/scss/_elements_article.scss
+++ b/scss/_elements_article.scss
@@ -13,19 +13,11 @@
 			margin: 0 auto 3rem;
 
 			h1.title {
-        display: table;
-        width: 100%;
-        height: 96px;
 				font-size: $paragraph-font-size*1.25;
 				text-align: center;
 				text-transform: uppercase;
 				letter-spacing: rem-calc(-0.09);
 				margin-bottom: $general-margin;
-
-        span {
-          display: table-cell;
-          vertical-align: middle;
-        }
 			}
 		}
 
@@ -230,6 +222,7 @@
 
 				h1.title {
 					background-image: none;
+          margin-bottom: rem-calc(30);
 				}
 			}
 		}
@@ -239,6 +232,19 @@
 
 		.longform {
 			padding-top: 0 !important;
+
+      .article-headline {
+        h1.title {
+          display: table;
+          width: 100%;
+          height: 96px;
+
+          span {
+            display: table-cell;
+            vertical-align: middle;
+          }
+        }
+      }
 
 			.social {
 				margin-left: 0;
